--- a/.github/workflows/v3_backend-docker.yml
+++ b/.github/workflows/v3_backend-docker.yml
@@ -9,7 +9,7 @@ on:
       - "apps/backend-docker/**"
       - ".github/workflows/v3_backend-docker**"
   pull_request:
-    branches: [ "v3" ]
+    # branches: [ "v3" ]
     paths:
       - "apps/backend-docker/**"
       - ".github/workflows/v3_backend-docker**"
