--- a/.github/workflows/v3_frontend-pwa-docker-qa.yml
+++ b/.github/workflows/v3_frontend-pwa-docker-qa.yml
@@ -8,7 +8,7 @@ on:
       - "apps/frontend-pwa/**"
       - ".github/workflows/v3_frontend-pwa**"
   pull_request:
-    branches: [ "v3" ]
+    # branches: [ "v3" ]
     paths:
       - "apps/frontend-pwa/**"
       - ".github/workflows/v3_frontend-pwa**"
