--- a/.github/workflows/v3_sonarcloud.yml
+++ b/.github/workflows/v3_sonarcloud.yml
@@ -4,6 +4,7 @@ on:
     branches:
       - v3
   pull_request:
+    branches: [ "v3" ]
     types: [opened, synchronize, reopened]
 jobs:
   sonarcloud:
