--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -15,6 +15,7 @@
     "build:copy": "node src/copy.js",
     "build:watch": "NODE_ENV=development tsup --watch",
     "format": "prettier --write .",
+    "format:check": "prettier --check .",
     "generate": "prisma generate --schema=src/prisma/schema.prisma",
     "migrate:learningElements": "ENV=development doppler run --config dev -- ts-node -r dotenv/config --esm --experimental-specifier-resolution=node src/scripts/migrateLearningElements.ts",
     "migrate:learningElements:prod": "ENV=development doppler run --config prd -- ts-node -r dotenv/config --esm --experimental-specifier-resolution=node src/scripts/migrateLearningElements.ts",
@@ -29,6 +30,7 @@
     "prisma:push:qa": "doppler run --config stg -- npm run prisma:push:raw",
     "prisma:reset:raw": "prisma migrate reset --schema=src/prisma/schema.prisma --skip-seed",
     "prisma:reset": "doppler run --config dev -- npm run prisma:reset:raw",
+    "prisma:resetCypress": "npm run prisma:reset:raw",
     "prisma:reset:seed": "doppler run --config dev -- prisma migrate reset --schema=src/prisma/schema.prisma",
     "prisma:reset:qa": "doppler run --config stg -- npm run prisma:reset:raw",
     "prisma:setup": "run-s prisma:reset prisma:push seed",
