--- a/apps/backend-docker/package.json
+++ b/apps/backend-docker/package.json
@@ -16,7 +16,8 @@
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "start": "node -r dotenv/config dist/index.js",
-    "start:test": "npm start"
+    "start:test": "npm start",
+    "check": "tsc --noEmit"
   },
   "engines": {
     "node": "=18"
