--- a/apps/backend-response-processor/package.json
+++ b/apps/backend-response-processor/package.json
@@ -15,7 +15,8 @@
     "dev:func": "func start -p 7073",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "start": "func start -p 7073"
+    "start": "func start -p 7073",
+    "check": "tsc --noEmit"
   },
   "dependencies": {
     "@klicker-uzh/grading": "^3.0.0-alpha.0",
