--- a/apps/frontend-manage/package.json
+++ b/apps/frontend-manage/package.json
@@ -11,7 +11,8 @@
     "format:check": "prettier --check .",
     "start": "next start --port 3002",
     "start:test": "cross-env NODE_ENV=test npm start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "check": "tsc --noEmit"
   },
   "dependencies": {
     "@apollo/client": "3.7.7",
