--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -18,7 +18,8 @@
     "format:check": "prettier --check .",
     "generate": "graphql-codegen --config codegen.ts",
     "push": "ts-node --esm src/lib/push.ts",
-    "size": "size-limit"
+    "size": "size-limit",
+    "check": "tsc --noEmit"
   },
   "engines": {
     "node": ">=18"
