--- a/packages/lti/package.json
+++ b/packages/lti/package.json
@@ -13,7 +13,8 @@
     "build:watch": "NODE_ENV=development tsup --watch",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "size": "size-limit"
+    "size": "size-limit",
+    "check": "tsc --noEmit"
   },
   "engines": {
     "node": "=18"
