chore(ci): add turbo remote cache config to linting and formatting workflows

--- a/.github/workflows/format-and-lint.yml
+++ b/.github/workflows/format-and-lint.yml
@@ -7,6 +7,11 @@ on:
     branches: ["v3"]
     types: [opened, synchronize, reopened]
 
+env:
+  TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
+  TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
+  TURBO_REMOTE_ONLY: true
+
 jobs:
   format:
     runs-on: ubuntu-latest
