--- a/deploy/env-prod/helmfile.yaml
+++ b/deploy/env-prod/helmfile.yaml
@@ -46,7 +46,7 @@ releases:
         analytics:
           sentry:
             frontend:
-              enabled: true
+              enabled: false
               dsn: '{{ requiredEnv "SENTRY_DSN" }}'
               authToken: '{{ requiredEnv "SENTRY_AUTH_TOKEN" }}'
               org: '{{ requiredEnv "SENTRY_ORG" }}'
@@ -57,38 +57,38 @@ releases:
               authToken: '{{ requiredEnv "SENTRY_AUTH_TOKEN" }}'
               org: '{{ requiredEnv "SENTRY_ORG" }}'
               project: '{{ requiredEnv "SENTRY_PROJECT_BACKEND" }}'
-  - name: klicker-community
-    namespace: klicker-prod
-    createNamespace: true
-    chart: bitnami/discourse
-    version: 7.0.16
-    installed: false
-    kubeContext: klicker-k8scbfdbd7c
-    values:
-      - auth:
-          email: '{{ requiredEnv "DISCOURSE_EMAIL" }}'
-          username: '{{ requiredEnv "DISCOURSE_USER" }}'
-          password: '{{ requiredEnv "DISCOURSE_PASS" }}'
-        host: community.klicker.uzh.ch
-        persistence:
-          enabled: true
-          storageClass: default-zrs
-        ingress:
-          enabled: true
-          annotations:
-            nginx.ingress.kubernetes.io/proxy-body-size: 256m
-            cert-manager.io/cluster-issuer: letsencrypt
-          hostname: community.klicker.uzh.ch
-          tls: true
-        redis:
-          enabled: false
-        externalRedis:
-          host: "klicker-prod-redis-master"
-        postgresql:
-          auth:
-            password: '{{ requiredEnv "POSTGRES_PASS" }}'
-        # externalDatabase:
-        #   host:
-        #   user:
-        #   password:
-        #   database:
+  # - name: klicker-community
+  #   namespace: klicker-prod
+  #   createNamespace: true
+  #   chart: bitnami/discourse
+  #   version: 7.0.16
+  #   installed: false
+  #   kubeContext: klicker-k8scbfdbd7c
+  #   values:
+  #     - auth:
+  #         email: '{{ requiredEnv "DISCOURSE_EMAIL" }}'
+  #         username: '{{ requiredEnv "DISCOURSE_USER" }}'
+  #         password: '{{ requiredEnv "DISCOURSE_PASS" }}'
+  #       host: community.klicker.uzh.ch
+  #       persistence:
+  #         enabled: true
+  #         storageClass: default-zrs
+  #       ingress:
+  #         enabled: true
+  #         annotations:
+  #           nginx.ingress.kubernetes.io/proxy-body-size: 256m
+  #           cert-manager.io/cluster-issuer: letsencrypt
+  #         hostname: community.klicker.uzh.ch
+  #         tls: true
+  #       redis:
+  #         enabled: false
+  #       externalRedis:
+  #         host: "klicker-prod-redis-master"
+  #       postgresql:
+  #         auth:
+  #           password: '{{ requiredEnv "POSTGRES_PASS" }}'
+  #       # externalDatabase:
+  #       #   host:
+  #       #   user:
+  #       #   password:
+  #       #   database:
