--- a/apps/backend-docker/package.json
+++ b/apps/backend-docker/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "dev": "npm-run-all --parallel dev:build dev:run",
     "dev:build": "tsup --watch",
-    "dev:run": "nodemon -w dist/ -w '../../packages/graphql/dist' --exec 'node -r dotenv/config dist/index.js'",
+    "dev:run": "nodemon -w dist/ -w '../../packages/graphql/dist' --exec 'doppler run --config dev node -- -r ./dist/index.js'",
     "build": "cross-env NODE_ENV=production tsup",
     "build:test": "npm run build",
     "format": "prettier --write .",
