--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "release:rc": "standard-version --prerelease rc --no-verify",
     "release:rc:dry": "standard-version --dry-run --prerelease rc",
     "test": "cypress open",
+    "test:run": "cypress run",
     "start": "turbo run start",
     "start:test": "turbo run start:test",
     "prepare": "husky install"
