enhance(cypress): add mobile-specific test cases and basic test coverage setup for backend (#3586)
Co-authored-by: Roland Schlaefli <rolandschlaefli@gmail.com>

--- a/package.json
+++ b/package.json
@@ -50,15 +50,18 @@
     "release:rc": "standard-version --prerelease rc --no-verify",
     "release:rc:dry": "standard-version --dry-run --prerelease rc",
     "test": "cypress open",
+    "test:run": "cypress run",
     "start": "turbo run start",
     "start:test": "turbo run start:test",
     "prepare": "husky install"
   },
   "devDependencies": {
+    "@cypress/code-coverage": "3.10.4",
     "@testing-library/cypress": "9.0.0",
     "azure-functions-core-tools": "4.0.5095",
-    "cypress": "12.7.0",
+    "cypress": "12.11.0",
     "husky": "8.0.3",
+    "nyc": "15.1.0",
     "prettier": "2.8.4",
     "prettier-plugin-organize-imports": "3.2.2",
     "standard-version": "9.5.0",
