--- a/package.json
+++ b/package.json
@@ -53,7 +53,9 @@
     "test:run": "cypress run",
     "start": "turbo run start",
     "start:test": "turbo run start:test",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "prisma:setup": "npm run -w packages/prisma prisma:setup",
+    "prisma:migrate": "npm run -w packages/prisma prisma:migrate"
   },
   "devDependencies": {
     "@cypress/code-coverage": "3.10.4",
