--- a/deploy/charts/klicker-uzh-v2/values.yaml
+++ b/deploy/charts/klicker-uzh-v2/values.yaml
@@ -14,6 +14,8 @@ notifications:
 
 cron:
   dailyGroupScores: "* * * * *"
+  pushNotifications: "*/5 * * * *"
+  token: ""
 
 frontendPWA:
   priorityClassName: production-workload
