--- a/apps/frontend-manage/.gitignore
+++ b/apps/frontend-manage/.gitignore
@@ -34,5 +34,11 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 
+# PWA
+public/sw*.js*
+public/workbox-*.js*
+public/fallback*.js*
+public/worker*.js
+
 # Sentry
 .sentryclirc
