make push notifications support email customizable

--- a/deploy/env-prod-v3/helmfile.yaml
+++ b/deploy/env-prod-v3/helmfile.yaml
@@ -53,6 +53,7 @@ releases:
           notifications:
             url: '{{ requiredEnv "NOTIFICATION_URL" }}'
             secret: '{{ requiredEnv "NOTIFICATION_SECRET" }}'
+            supportMail: '{{ requiredEnv "SUPPORT_MAIL" }}'
 
           redisCache:
             host: klicker-v2-prod-redis-master
