--- a/deploy/charts/klicker-uzh-v2/templates/secret-backend-graphql.yaml
+++ b/deploy/charts/klicker-uzh-v2/templates/secret-backend-graphql.yaml
@@ -8,6 +8,8 @@ type: Opaque
 stringData:
   APP_SECRET: {{ .Values.appSecret | quote }}
   NOTIFICATION_SECRET: {{ .Values.backendGraphql.notifications.secret | quote }}
+  VAPID_PUBLIC_KEY: {{ .Values.backendGraphql.vapid.publicKey | quote }}
+  VAPID_PRIVATE_KEY: {{ .Values.backendGraphql.vapid.privateKey | quote }}
   DATABASE_URL: {{ .Values.backendGraphql.databaseUrl | quote }}
   REDIS_CACHE_PASS: {{ .Values.backendGraphql.redisCache.pass | quote }}
   REDIS_PASS: {{ .Values.backendGraphql.redisExec.pass | quote }}
