--- a/deploy/charts/klicker-uzh-v2/values.yaml
+++ b/deploy/charts/klicker-uzh-v2/values.yaml
@@ -11,6 +11,11 @@ securityContext: {}
 notifications:
   url: ''
   secret: ''
+  supportMail: ''
+
+vapid:
+  publicKey: ''
+  privateKey: ''
 
 cron:
   dailyGroupScores: "* * * * *"
