--- a/deploy/env-prod-v3/helmfile.yaml
+++ b/deploy/env-prod-v3/helmfile.yaml
@@ -54,6 +54,10 @@ releases:
             url: '{{ requiredEnv "NOTIFICATION_URL" }}'
             secret: '{{ requiredEnv "NOTIFICATION_SECRET" }}'
             supportMail: '{{ requiredEnv "SUPPORT_MAIL" }}'
+          
+          vapid:
+            publicKey: '{{ requiredEnv "VAPID_PUBLIC_KEY" }}'
+            privateKey: '{{ requiredEnv "VAPID_PRIVATE_KEY" }}'
 
           redisCache:
             host: klicker-v2-prod-redis-master
