enhance: automate push notifications and implement unsubscribe functionality (#3574)

--- a/deploy/charts/klicker-uzh-v2/values.yaml
+++ b/deploy/charts/klicker-uzh-v2/values.yaml
@@ -11,9 +11,16 @@ securityContext: {}
 notifications:
   url: ''
   secret: ''
+  supportMail: ''
+
+vapid:
+  publicKey: ''
+  privateKey: ''
 
 cron:
   dailyGroupScores: "* * * * *"
+  pushNotifications: "*/5 * * * *"
+  token: ""
 
 frontendPWA:
   priorityClassName: production-workload
