--- a/packages/graphql/tsconfig.json
+++ b/packages/graphql/tsconfig.json
@@ -6,9 +6,6 @@
     "baseUrl": "."
   },
   "ts-node": {
-    "transpileOnly": true,
-    "moduleTypes": {
-      "src/lib/push.ts": "esm"
-    }
+    "transpileOnly": true
   }
 }
