rename directories to match recommendations

--- a/apps/backend-response-processor/tsconfig.json
+++ b/apps/backend-response-processor/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "@tsconfig/node18/tsconfig.json",
-  "include": ["ProcessResponses"],
+  "include": ["src"],
   "compilerOptions": {
     "module": "ESNext"
   }
