--- a/apps/backend-response-processor-v4/package.json
+++ b/apps/backend-response-processor-v4/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "desktop",
+  "name": "@klicker-uzh/backend-response-processor-v4",
   "version": "1.0.0",
   "description": "",
+  "main": "dist/functions/*.js",
   "scripts": {
     "build": "tsc",
     "clean": "rimraf dist",
@@ -21,6 +22,5 @@
     "@types/node": "^18.x",
     "typescript": "^4.0.0",
     "rimraf": "^5.0.0"
-  },
-  "main": "dist/src/functions/*.js"
+  }
 }
