--- a/apps/backend-response-processor-v4/local.settings.template
+++ b/apps/backend-response-processor-v4/local.settings.template
@@ -1,8 +1,20 @@
 {
   "IsEncrypted": false,
   "Values": {
+    "NODE_ENV": "development",
     "AzureWebJobsStorage": "UseDevelopmentStorage=true",
     "FUNCTIONS_WORKER_RUNTIME": "node",
-    "AzureWebJobsFeatureFlags": "EnableWorkerIndexing"
+    "FUNCTIONS_EXTENSION_VERSION": "~4",
+    "FUNCTIONS_WORKER_PROCESS_COUNT": 10,
+    "AzureWebJobsFeatureFlags": "EnableWorkerIndexing",
+    "APP_SECRET": "abcd",
+    "REDIS_HOST": "localhost",
+    "REDIS_PORT": 6379,
+    "SERVICE_BUS_CONNECTION_STRING": "",
+    "SERVICE_BUS_QUEUE_NAME": "q-dev"
+  },
+  "Host": {
+    "CORS": "http://127.0.0.1:3001",
+    "CORSCredentials": true
   }
 }
