--- a/apps/backend-response-processor-v4/package.json
+++ b/apps/backend-response-processor-v4/package.json
@@ -1,10 +1,15 @@
 {
+  "private": true,
   "name": "@klicker-uzh/backend-response-processor-v4",
-  "version": "1.0.0",
-  "description": "",
-  "main": "dist/functions/*.js",
+  "version": "3.0.0-alpha.82",
+  "license": "AGPL-3.0",
+  "main": "dist/src/functions/*.js",
+  "files": [
+    "dist/src",
+    "dist/src/functions"
+  ],
   "scripts": {
-    "build": "tsc",
+    "build": "cross-env NODE_ENV=production tsc",
     "clean": "rimraf dist",
     "prestart": "npm run clean && npm run build",
     "dev": "npm-run-all --parallel dev:ts dev:func",
@@ -16,11 +21,35 @@
     "check": "tsc --noEmit"
   },
   "dependencies": {
-    "@azure/functions": "^4.0.0-alpha.7"
+    "@azure/functions": "^4.0.0-alpha.7",
+    "@klicker-uzh/grading": "^3.0.0-alpha.82",
+    "@sentry/node": "7.52.1",
+    "@tsconfig/node18": "^2.0.0",
+    "ioredis": "5.3.2",
+    "jsonwebtoken": "9.0.0",
+    "md5": "2.3.0",
+    "ramda": "0.29.0"
   },
   "devDependencies": {
-    "@types/node": "^18.x",
-    "typescript": "^4.0.0",
-    "rimraf": "^5.0.0"
+    "@tsconfig/node18": "^2.0.0",
+    "@tsconfig/recommended": "^1.0.2",
+    "@types/jsonwebtoken": "^9.0.1",
+    "@types/md5": "2.3.2",
+    "@types/node": "^18.0.0",
+    "@types/ramda": "^0.29.0",
+    "@uzh-bf/design-system": "1.7.1",
+    "rimraf": "^5.0.0",
+    "cross-env": "7.0.3",
+    "dotenv": "16.0.3",
+    "husky": "8.0.3",
+    "npm-run-all": "4.1.5",
+    "ts-node": "10.9.1",
+    "typescript": "5.0.4"
+  },
+  "volta": {
+    "extends": "../../package.json"
+  },
+  "engines": {
+    "node": "=18"
   }
 }
