--- a/apps/backend-response-processor-v4/tsconfig.json
+++ b/apps/backend-response-processor-v4/tsconfig.json
@@ -1,10 +1,7 @@
 {
+  "extends": "@tsconfig/node18/tsconfig.json",
+  "include": ["src"],
   "compilerOptions": {
-    "module": "commonjs",
-    "target": "es6",
-    "outDir": "dist",
-    "rootDir": ".",
-    "sourceMap": true,
-    "strict": false
+    "module": "ESNext"
   }
 }
