--- a/apps/backend-response-v4/tsconfig.json
+++ b/apps/backend-response-v4/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "@tsconfig/node18/tsconfig.json",
   "include": ["src"],
   "compilerOptions": {
-    "module": "ESNext"
+    "module": "ESNext",
+    "outDir": "./dist",
   }
 }
